--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,9 @@ dependencies:
   path_provider: ^2.0.10
   sqflite: ^2.0.0+2
   get:
-
   path: any
+  firebase_core: ^3.15.1
+  firebase_auth: ^5.6.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
