--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path: any
   firebase_core: ^3.15.1
   firebase_auth: ^5.6.2
+  google_sign_in:
 dev_dependencies:
   flutter_test:
     sdk: flutter
