实现谷歌登录.优化了购物界面退出ui,在pixel 5 android16 Baklava arm64可以稳定运行

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,10 @@ dependencies:
   sqflite: ^2.0.0+2
   get:
   path: any
-  firebase_core: ^3.15.1
-  firebase_auth: ^5.6.2
+  firebase_core:
+  firebase_auth:
   google_sign_in:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
