有点小bug,但是实现了登录列表

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_core:
   firebase_auth:
   google_sign_in:
+  cloud_firestore: ^5.6.11
 
 dev_dependencies:
   flutter_test:
