--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth:
   google_sign_in:
   cloud_firestore: ^5.6.11
+  home_widget: ^0.8.0
 
 dev_dependencies:
   flutter_test:
