--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_sign_in:
   cloud_firestore: ^5.6.11
   home_widget: ^0.8.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
