--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,6 @@
 
     <application
         android:name="${applicationName}"
-
         android:icon="@mipmap/ic_launcher"
         android:label="test6_26">
         <receiver
@@ -55,7 +54,7 @@
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="es.antonborri.home_widget.action.LAUNCH" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
